--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -331,26 +331,23 @@
     <Compile Include="..\Vts\Modeling\ForwardSolvers\MGRTE\2D\DataStructures\SpatialMesh.cs">
       <Link>Modeling\ForwardSolvers\MGRTE\2D\DataStructures\SpatialMesh.cs</Link>
     </Compile>
-    <Compile Include="..\Vts\Modeling\ForwardSolvers\MGRTE\2D\Initialization.cs">
-      <Link>Modeling\ForwardSolvers\MGRTE\2D\Initialization.cs</Link>
+    <Compile Include="..\Vts\Modeling\ForwardSolvers\MGRTE\2D\IO\Initialization.cs">
+      <Link>Modeling\ForwardSolvers\MGRTE\2D\IO\Initialization.cs</Link>
     </Compile>
     <Compile Include="..\Vts\Modeling\ForwardSolvers\MGRTE\2D\IO\ParametersIO.cs">
       <Link>Modeling\ForwardSolvers\MGRTE\2D\IO\ParametersIO.cs</Link>
     </Compile>
-    <Compile Include="..\Vts\Modeling\ForwardSolvers\MGRTE\2D\IO\ReadFiles.cs">
-      <Link>Modeling\ForwardSolvers\MGRTE\2D\IO\ReadFiles.cs</Link>
+    <Compile Include="..\Vts\Modeling\ForwardSolvers\MGRTE\2D\IO\ReadDataFiles.cs">
+      <Link>Modeling\ForwardSolvers\MGRTE\2D\IO\ReadDataFiles.cs</Link>
     </Compile>
     <Compile Include="..\Vts\Modeling\ForwardSolvers\MGRTE\2D\IO\Source.cs">
       <Link>Modeling\ForwardSolvers\MGRTE\2D\IO\Source.cs</Link>
     </Compile>
-    <Compile Include="..\Vts\Modeling\ForwardSolvers\MGRTE\2D\MathFunctions.cs">
-      <Link>Modeling\ForwardSolvers\MGRTE\2D\MathFunctions.cs</Link>
-    </Compile>
     <Compile Include="..\Vts\Modeling\ForwardSolvers\MGRTE\2D\MultiGridCycle.cs">
       <Link>Modeling\ForwardSolvers\MGRTE\2D\MultiGridCycle.cs</Link>
     </Compile>
-    <Compile Include="..\Vts\Modeling\ForwardSolvers\MGRTE\2D\SolverMGRTE.cs">
-      <Link>Modeling\ForwardSolvers\MGRTE\2D\SolverMGRTE.cs</Link>
+    <Compile Include="..\Vts\Modeling\ForwardSolvers\MGRTE\2D\Solver.cs">
+      <Link>Modeling\ForwardSolvers\MGRTE\2D\Solver.cs</Link>
     </Compile>
     <Compile Include="..\Vts\Modeling\ForwardSolvers\MonteCarloForwardSolver.cs">
       <Link>Modeling\ForwardSolvers\MonteCarloForwardSolver.cs</Link>
@@ -532,6 +529,9 @@
     <Compile Include="..\Vts\MonteCarlo\DataStructures\SourceInputs\PointSourceCollimatedInput.cs">
       <Link>MonteCarlo\DataStructures\SourceInputs\PointSourceCollimatedInput.cs</Link>
     </Compile>
+    <Compile Include="..\Vts\MonteCarlo\DataStructures\TissueInputs\MultiLayerTissueInput.cs">
+      <Link>MonteCarlo\DataStructures\TissueInputs\MultiLayerTissueInput.cs</Link>
+    </Compile>
     <Compile Include="..\Vts\MonteCarlo\Detectors\AOfRhoAndZDetector.cs">
       <Link>MonteCarlo\Detectors\AOfRhoAndZDetector.cs</Link>
     </Compile>
@@ -702,6 +702,9 @@
     </Compile>
     <Compile Include="..\Vts\MonteCarlo\PostProcessing\PhotonTerminationDatabasePostProcessor.cs">
       <Link>MonteCarlo\PostProcessing\PhotonTerminationDatabasePostProcessor.cs</Link>
+    </Compile>
+    <Compile Include="..\Vts\MonteCarlo\Sources\CustomPointSourceInputOld.cs">
+      <Link>MonteCarlo\Sources\CustomPointSourceInputOld.cs</Link>
     </Compile>
     <Compile Include="..\Vts\MonteCarlo\Sources\EllipticalSources\EllipticalSourceCollimatedFlat.cs">
       <Link>MonteCarlo\Sources\EllipticalSources\EllipticalSourceCollimatedFlat.cs</Link>
@@ -991,9 +994,7 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="MonteCarlo\DataStructures\SourceInputs\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
