--- a/src/Vts/Vts.csproj
+++ b/src/Vts/Vts.csproj
@@ -198,11 +198,8 @@
     <Compile Include="Modeling\ForwardSolvers\MGRTE\2D\DataStructures\LightSource.cs" />
     <Compile Include="Modeling\ForwardSolvers\MGRTE\2D\DataStructures\Measurement.cs" />
     <Compile Include="Modeling\ForwardSolvers\MGRTE\2D\DataStructures\SpatialMesh.cs" />
-    <Compile Include="Modeling\ForwardSolvers\MGRTE\2D\Enums.cs" />
-    <Compile Include="Modeling\ForwardSolvers\MGRTE\2D\Initialization.cs" />
     <Compile Include="Modeling\ForwardSolvers\MGRTE\2D\IO\ParametersIO.cs" />
     <Compile Include="Modeling\ForwardSolvers\MGRTE\2D\IO\ReadDataFiles.cs" />
-    <Compile Include="Modeling\ForwardSolvers\MGRTE\2D\MathFunctions.cs" />
     <Compile Include="Modeling\ForwardSolvers\MGRTE\2D\MultiGridCycle.cs" />
     <Compile Include="Modeling\ForwardSolvers\MGRTE\2D\DataStructures\Output.cs" />
     <Compile Include="Modeling\ForwardSolvers\MGRTE\2D\DataStructures\Parameters.cs" />
@@ -248,7 +245,7 @@
     <Compile Include="MonteCarlo\DataStructures\SimulationInputExtensions.cs" />
     <Compile Include="MonteCarlo\DataStructures\SimulationInputProvider.cs" />
     <Compile Include="MonteCarlo\DataStructures\SimulationOptions.cs" />
-    <Compile Include="MonteCarlo\DataStructures\SourceInputs\PointSourceCollimatedInput.cs" />    
+    <Compile Include="MonteCarlo\DataStructures\SourceInputs\PointSourceCollimatedInput.cs" />
     <Compile Include="MonteCarlo\DataStructures\DetectorInputs\AOfRhoAndZDetectorInput.cs" />
     <Compile Include="MonteCarlo\DataStructures\DetectorInputs\ATotalDetectorInput.cs" />
     <Compile Include="MonteCarlo\DataStructures\DetectorInputs\pMCROfRhoAndTimeDetectorInput.cs" />
@@ -480,9 +477,7 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="MonteCarlo\DataStructures\SourceInputs\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Silverlight\$(SilverlightVersion)\Microsoft.Silverlight.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
