Added unit tests for PhotonDatabase and CollisionInfoDatabase.  Found potential error in CustomBinaryStreamWriterOfT, Count was getting incremented in Write(T item) and Write(IEnumerable<T> items) so Count was twice as much as it should be. PhotonDatabaseTests all passing with this fix. CollisionInfoDatabaseTests failing.  The writing of the database appears to work fine, problem on reading side. CollisionInfoDatabase.FromFile calls DatabaseOfT method TSelfReferenceType and BinaryReader is null.
--HG--
branch : dc-110405-database_refactoring

--- a/src/Vts.Test/Vts.Test.csproj
+++ b/src/Vts.Test/Vts.Test.csproj
@@ -175,6 +175,8 @@
     <Compile Include="MonteCarlo\DataStructures\DetectorInputs\pMCDetectorInputTests.cs" />
     <Compile Include="MonteCarlo\IO\DetectorIOTests.cs" />
     <Compile Include="MonteCarlo\MonteCarloFactoriesTests.cs" />
+    <Compile Include="MonteCarlo\PhotonData\CollisionInfoDatabaseTests.cs" />
+    <Compile Include="MonteCarlo\PhotonData\PhotonDatabaseTests.cs" />
     <Compile Include="MonteCarlo\PostProcessing\PostProcessingTests.cs" />
     <Compile Include="MonteCarlo\Sources\CustomPointSourceTests.cs" />
     <Compile Include="MonteCarlo\Detectors\AnalogTallyActionsTests.cs" />
