Changes to database read/write architecture:
1) Model of data, representing a single "data point" to be written
        - e.g. PhotonDataPoint, CollisionInfo
2) Serializer to read/write the single model data point
        - implements ICustomBinaryWriter, ICustomBinaryReader for model data
        - e.g. PhotonDataPointSerializer, CollisionInfoSerializer
3) Database to represent a stream of data points,
        - can included optional custom metadata, which will be housed in the xml
        - can include FromFile and FromFileInResources to simplify consumption
        - desinged not to have to hold entire database in memory
          (enumerating and calling .ToArray() is discouraged)
        - e.g. PhotonDatabase, CollisionInfoDatabase
4) Database writer, which writes one "data point" at a time to a file
        - again, designed not to need the "whole" database to write
        - instead, creates the database incrementally as new data is generated
        - e.g. PhotonDatabaseWriter, CollisionInfoDatabaseWriter

--HG--
branch : dc-110405-database_refactoring

--- a/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
+++ b/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
@@ -209,6 +209,12 @@
     <Compile Include="..\Vts.Test\MonteCarlo\MonteCarloFactoriesTests.cs">
       <Link>MonteCarlo\MonteCarloFactoriesTests.cs</Link>
     </Compile>
+    <Compile Include="..\Vts.Test\MonteCarlo\PhotonData\CollisionInfoDatabaseTests.cs">
+      <Link>MonteCarlo\PhotonData\CollisionInfoDatabaseTests.cs</Link>
+    </Compile>
+    <Compile Include="..\Vts.Test\MonteCarlo\PhotonData\PhotonDatabaseTests.cs">
+      <Link>MonteCarlo\PhotonData\PhotonDatabaseTests.cs</Link>
+    </Compile>
     <Compile Include="..\Vts.Test\MonteCarlo\PostProcessing\PostProcessingTests.cs">
       <Link>MonteCarlo\PostProcessing\PostProcessingTests.cs</Link>
     </Compile>
