Implemented pMCDatabase - not intended to be written, just read. To use, point pMCDatabase.FromFile or .FromFileInResources at the two underlying database files (PhotonDatabase and CollisionInfoDatabase files).
--HG--
branch : dc-110405-database_refactoring

--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -703,6 +703,12 @@
     <Compile Include="..\Vts\MonteCarlo\PhotonData\PhotonDataPointSerializer.cs">
       <Link>MonteCarlo\PhotonData\PhotonDataPointSerializer.cs</Link>
     </Compile>
+    <Compile Include="..\Vts\MonteCarlo\PhotonData\pMCDatabase.cs">
+      <Link>MonteCarlo\PhotonData\pMCDatabase.cs</Link>
+    </Compile>
+    <Compile Include="..\Vts\MonteCarlo\PhotonData\pMCDataPoint.cs">
+      <Link>MonteCarlo\PhotonData\pMCDataPoint.cs</Link>
+    </Compile>
     <Compile Include="..\Vts\MonteCarlo\PhotonData\SubRegionCollisionInfo.cs">
       <Link>MonteCarlo\PhotonData\SubRegionCollisionInfo.cs</Link>
     </Compile>
