Added pMCDatabaseTests unit tests.  Corrected namespace in PhotonDatabaseTests and CollisionInfoDatabaseTests.cs. These 3 unit test classes passing currently.
--HG--
branch : dc-110405-database_refactoring

--- a/src/Vts.Test/Vts.Test.csproj
+++ b/src/Vts.Test/Vts.Test.csproj
@@ -251,6 +251,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="MonteCarlo\PhotonData\CollisionInfoDatabaseTests.cs" />
+    <Compile Include="MonteCarlo\PhotonData\pMCDatabaseTests.cs" />
     <Compile Include="MonteCarlo\PhotonData\PhotonDatabaseTests.cs" />
     <Compile Include="MonteCarlo\PostProcessing\PostProcessingTests.cs">
       <SubType>Code</SubType>
