--- a/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
+++ b/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
@@ -215,6 +215,9 @@
     <Compile Include="..\Vts.Test\MonteCarlo\PhotonData\PhotonDatabaseTests.cs">
       <Link>MonteCarlo\PhotonData\PhotonDatabaseTests.cs</Link>
     </Compile>
+    <Compile Include="..\Vts.Test\MonteCarlo\PhotonData\pMCDatabaseTests.cs">
+      <Link>MonteCarlo\PhotonData\pMCDatabaseTests.cs</Link>
+    </Compile>
     <Compile Include="..\Vts.Test\MonteCarlo\PostProcessing\PostProcessingTests.cs">
       <Link>MonteCarlo\PostProcessing\PostProcessingTests.cs</Link>
     </Compile>
