Modified all MC code (e.g. PhotonHistory, IpMCTerminationDetector) to use new class CollisionInfo rather than IList<SubRegionCollisionInfo>.
Renamed pMCTallyActionTests to pMCDAWTallyActionTests and got code to run tests
successfully.  To do this needed to reparameterize GenerateOuput in
PhotonTerminationDatabasePostProcessor.  Modified all that called
GenerateOutput including pMCForwardSolver.  Added pMCTwoLayerTallyActionTests.

Renamed database files in MCSimulation to be SimulationInput parameter OutputFilename
+ _photonExitDatabase and + _collisionInfoDatabase for photonDataPoints and
CollisionInfo respectively.  Modified code that references these files including
PostProcessingTests.

Modified pMCLoader to read in both databases: PhotonDataPoints and
CollisionInfo.

Made field private in unit tests.

--HG--
branch : dc-110405-database_refactoring

--- a/src/Vts.Test/Vts.Test.csproj
+++ b/src/Vts.Test/Vts.Test.csproj
@@ -235,13 +235,14 @@
     <Compile Include="MonteCarlo\Detectors\CAWTwoLayerTallyActionsTests.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="MonteCarlo\Detectors\pMCDAWTwoLayerTallyActionsTests.cs" />
     <Compile Include="MonteCarlo\Detectors\DAWTallyActionsTests.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="MonteCarlo\Detectors\DAWTwoLayerTallyActionsTests.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="MonteCarlo\Detectors\pMCTallyActionsTests.cs">
+    <Compile Include="MonteCarlo\Detectors\pMCDAWTallyActionsTests.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="MonteCarlo\IO\DetectorIOTests.cs">
