--- a/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
+++ b/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
@@ -200,8 +200,11 @@
     <Compile Include="..\Vts.Test\MonteCarlo\Detectors\DAWTwoLayerTallyActionsTests.cs">
       <Link>MonteCarlo\Detectors\DAWTwoLayerTallyActionsTests.cs</Link>
     </Compile>
-    <Compile Include="..\Vts.Test\MonteCarlo\Detectors\pMCTallyActionsTests.cs">
-      <Link>MonteCarlo\Detectors\pMCTallyActionsTests.cs</Link>
+    <Compile Include="..\Vts.Test\MonteCarlo\Detectors\pMCDAWTallyActionsTests.cs">
+      <Link>MonteCarlo\Detectors\pMCDAWTallyActionsTests.cs</Link>
+    </Compile>
+    <Compile Include="..\Vts.Test\MonteCarlo\Detectors\pMCDAWTwoLayerTallyActionsTests.cs">
+      <Link>MonteCarlo\Detectors\pMCDAWTwoLayerTallyActionsTests.cs</Link>
     </Compile>
     <Compile Include="..\Vts.Test\MonteCarlo\IO\DetectorIOTests.cs">
       <Link>MonteCarlo\IO\DetectorIOTests.cs</Link>
