Added Two Surface Emitting Sources and Included Lambertian distribution method to SourceToolbox
--HG--
branch : dc-110311-source_restructuring

--- a/src/Vts/Vts.csproj
+++ b/src/Vts/Vts.csproj
@@ -305,6 +305,7 @@
     <Compile Include="MonteCarlo\PostProcessing\PhotonTerminationDatabasePostProcessor.cs" />
     <Compile Include="Common\Extension Methods\RNGExtensions.cs" />
     <Compile Include="MonteCarlo\Helpers\SourceFlags.cs" />
+    <Compile Include="MonteCarlo\Sources\SurfaceEmittingSources\SphericalSurfaceEmmitingSourceCustomLambertian.cs" />
     <Compile Include="MonteCarlo\Sources\EllipticalSources\EllipticalSourceCollimatedFlat.cs" />
     <Compile Include="MonteCarlo\Sources\EllipticalSources\EllipticalSourceCollimatedGaussian.cs" />
     <Compile Include="MonteCarlo\Sources\EllipticalSources\EllipticalSourceConvergingFlat.cs" />
@@ -352,9 +353,11 @@
     <Compile Include="MonteCarlo\Sources\RectangularSources\RectangularSourceWithNAGaussian.cs" />
     <Compile Include="MonteCarlo\Helpers\SourceToolbox.cs" />
     <Compile Include="MonteCarlo\Sources\SourceProfiles\Gaussian3DSourceProfile.cs" />
+    <Compile Include="MonteCarlo\Sources\SourceProfiles\Gaussian3DSourceProfile.cs" />
     <Compile Include="MonteCarlo\Sources\SourceProfiles\Gaussian2DSourceProfile.cs" />
     <Compile Include="MonteCarlo\Sources\SourceProfiles\Gaussian1DSourceProfile.cs" />
     <Compile Include="MonteCarlo\Sources\SourceProfiles\FlatSourceProfile.cs" />
+    <Compile Include="MonteCarlo\Sources\SurfaceEmittingSources\SphericalSurfaceEmmitingSourceCustom.cs" />
     <Compile Include="MonteCarlo\Sources\VolumetricSources\CuboidalSourceFlatIsotropic.cs" />
     <Compile Include="MonteCarlo\Sources\VolumetricSources\CuboidalSourceGaussianIsotropic.cs" />
     <Compile Include="MonteCarlo\Sources\VolumetricSources\EllipsoidalSourceFlatIsotropic.cs" />
